--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Assignment-5</title>
+    <title>Emergency-Hotline</title>
  <!-- style.css-->
     <link rel="stylesheet" href="./styles/style.css">
 <!-- Tailwind CSS CDN -->
