--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
            
 
         </div>
-         <div class="right-card flex justify-around items-center w-full xl:w-[30%] h-full bg-white drop-shadow-lg mx-5">
+         <div class="right-card flex justify-around items-center w-full xl:w-[30%] h-full bg-white drop-shadow-lg rounded-lg mx-5">
             <h1 class="font-bold"><i class="fa-regular fa-clock"></i> Call History</h1>
             <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] rounded-3xl flex items-center">  
                  <p class="font-bold mx-auto">Clear</p>
