--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Emergency-Hotline</title>
  <!-- style.css-->
     <link rel="stylesheet" href="./styles/style.css">
@@ -24,11 +23,12 @@
         </div>
         <div class="nav-right p-5 flex items-center gap-2">
             <button class="bg-[#41ff6b1a] w-[80px] h-[40px] rounded-3xl flex items-center mx-auto gap-3">
-                <p class="ml-3 font-bold">32</p>
+                
+                <span id="love-count"class="ml-3 font-bold">0</span>
                 <img class="w-[30px] h-[30px]" src="./assets/heart.png" alt="">
             </button>
             <button class="bg-[#41ff6b1a] w-[80px] h-[40px] rounded-3xl flex items-center mx-auto gap-3">
-                <p class="ml-3 font-bold">24</p>
+                <p class="ml-3 font-bold">100</p>
                 <img class="w-[30px] h-[30px]" src="./assets/coin.png" alt="">
             </button>
             <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] rounded-3xl flex items-center mx-auto ">  
@@ -49,7 +49,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i id="love" class="fa-regular fa-heart"></i>
+                   <span class="love"><i class="fa-regular fa-heart"></i></span> 
                 </div>
                 <h1 class="font-bold text-lg mt-2">National Emergency Number</h1>
                 <p class="text-gray-500">National Emergency</p>
@@ -63,7 +63,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/police.png" alt="logo-police">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Police Helpline Number</h1>
                 <p class="text-gray-500">Police</p>
@@ -77,7 +77,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/fire-service.png" alt="logo-fire">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Fire Service Number</h1>
                 <p class="text-gray-500">Fire Service</p>
@@ -91,7 +91,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/ambulance.png" alt="logo-ambulance">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Ambulance Service</h1>
                 <p class="text-gray-500">Ambulance</p>
@@ -105,7 +105,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Women & Child Helpline</h1>
                 <p class="text-gray-500">Women & Child Helpline</p>
@@ -119,7 +119,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Anti-Corruption Helpline</h1>
                 <p class="text-gray-500">Anti-Corruption</p>
@@ -133,7 +133,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Electricity Helpline</h1>
                 <p class="text-gray-500">Electricity Outage</p>
@@ -147,7 +147,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Brac Helpline</h1>
                 <p class="text-gray-500">Brac </p>
@@ -161,7 +161,7 @@
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg ">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
-                    <i class="fa-regular fa-heart"></i>
+                    <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-lg mt-2">Bangladesh Railway Helpline </h1>
                 <p class="text-gray-500">Bangladesh Railway</p>
@@ -177,9 +177,8 @@
         </div>
          <div class="right-card flex justify-around items-center w-full xl:w-[30%] h-full bg-white drop-shadow-lg rounded-lg mx-5">
             <h1 class="font-bold"><i class="fa-regular fa-clock"></i> Call History</h1>
-            <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] rounded-3xl flex items-center">  
-                 <p class="font-bold mx-auto">Clear</p>
-            </button>
+            <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] 
+            rounded-3xl font-bold "> Clear</button>
         </div>
       </section>
 
