--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         <div id="call-history" class="right-card w-full xl:w-[30%] h-[920px] bg-white 
                  drop-shadow-lg rounded-lg mx-5 border-2 border red-400">
-             <div class=" flex justify-around items-center ">
+             <div class=" flex justify-around items-center p-2 ">
                 <h1 class="font-bold"><i class="fa-regular fa-clock"></i> Call History</h1>
                 <button class=" text-white bg-[#29A74A] w-[90px] h-full
                  rounded-3xl font-bold "> Clear</button>
