--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
                 <span id="coin-count"class="ml-3 font-bold">100</span>
                 <img class="w-[30px] h-[30px]" src="./assets/coin.png" alt="">
             </button>
-            <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] rounded-3xl flex items-center mx-auto ">  
-                 <p class="ml-3 font-bold">0</p>
-                 <p class="ml-1 font-bold">Copy</p>
+            <button class=" text-white bg-[#29A74A] w-[90px] h-[40px] rounded-3xl flex items-center justify-center">  
+                <span id="copy-count"class="font-bold ">0 Copy</span>
             </button>
         </div>
     </section>
     <!-- 2-banner -->
-     <section class="banner text-center w-full max-w-[1350px] mx-auto h-[200px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-white mt-3 pt-5">
+     <section class="banner text-center w-full max-w-[1350px] mx-auto h-[220px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-white mt-3 pt-5">
         <img class="w-[90px] h-[90px] mx-auto" src="./assets/logo.png" alt="logo">
         <h1 class="font-bold text-2xl py-2">Emergency Service Directory</h1>
         <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
@@ -57,7 +56,7 @@
                 <h1 class="font-bold text-2xl mt-2">999</h1>
                 <button class="bg-gray-200 w-[35px] h-[25px] rounded-lg">All</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="National Emergency Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div> 
             </div>
@@ -71,8 +70,8 @@
                 <h1 class="font-bold text-2xl mt-2">999</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Police</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Police Helpline Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -85,8 +84,8 @@
                 <h1 class="font-bold text-2xl mt-2">999</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Fire</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Fire Service Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -99,8 +98,8 @@
                 <h1 class="font-bold text-2xl mt-2">1994-999999</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Health</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Ambulance Service"data-number="1994-999999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -113,8 +112,8 @@
                 <h1 class="font-bold text-2xl mt-2">109</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Help</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Women & Child Helpline"data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -127,8 +126,8 @@
                 <h1 class="font-bold text-2xl mt-2">106</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Govt.</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button  class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button  class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Anti-Corruption Helpline"data-number="106"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -141,8 +140,8 @@
                 <h1 class="font-bold text-2xl mt-2">16216</h1>
                 <button class="bg-gray-200 w-[85px] h-[25px] rounded-lg">Electricity</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Electricity Helpline"data-number="16216"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
@@ -155,8 +154,8 @@
                 <h1 class="font-bold text-2xl mt-2">16445</h1>
                 <button class="bg-gray-200 w-[40px] h-[25px] rounded-lg">NGO</button>
                 <div class="flex gap-2 mt-3">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Brac Helpline"data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg ">
@@ -169,8 +168,8 @@
                 <h1 class="font-bold text-2xl mt-2">163</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Travel</button>
                 <div class="flex gap-2 mt-4">
-                    <button class="border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"><i class="fa-solid fa-phone"></i> Call</button>
+                    <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="Bangladesh Railway Helpline"data-number="163"><i class="fa-solid fa-phone"Brac Helpline></i> Call</button>
                 </div>
             </div>
            
@@ -178,12 +177,12 @@
 
         <div id="call-history" class="right-card w-full xl:w-[30%] h-[920px] bg-white 
                  drop-shadow-lg rounded-lg mx-5 border-2 border red-400">
-             <div class=" flex justify-around items-center p-2 ">
+             <div class=" flex justify-around items-center p-4 mt-2 ">
                 <h1 class="font-bold"><i class="fa-regular fa-clock"></i> Call History</h1>
-                <button class=" text-white bg-[#29A74A] w-[90px] h-full
+                <button id="clear-btn" class=" text-white bg-[#29A74A] w-[90px] h-[40px]
                  rounded-3xl font-bold "> Clear</button>
             </div> 
-            <ul id="history-list" class=" mt-3 "></ul>
+            <ul id="history-list" class=" mt-2 "></ul>
         </div>
       </section>
 
