--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </div>
     </section>
     <!-- 2-banner -->
-     <section class="banner text-center w-full max-w-[1350px] mx-auto h-[220px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-white mt-3 pt-5">
+     <section class="banner text-center w-full max-w-[1350px] mx-auto h-[230px] bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-white mt-3 pt-5">
         <img class="w-[90px] h-[90px] mx-auto" src="./assets/logo.png" alt="logo">
         <h1 class="font-bold text-2xl py-2">Emergency Service Directory</h1>
         <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
      </section>
      <!-- 3-card/main -->
-      <section class="card-parent bg-[#F5FFF6] flex flex-col xl:flex-row border-2 border-green-500 py-10 w-full max-w-[1300px] mx-auto gap-5">
+      <section class="card-parent bg-[#F5FFF6] flex flex-col xl:flex-row py-10 w-full max-w-[1300px] mx-auto gap-5">
         <div class="left-card w-full xl:w-[70%] h-full grid sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
             <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
@@ -176,7 +176,7 @@
         </div>
 
         <div id="call-history" class="right-card w-full xl:w-[30%] h-[920px] bg-white 
-                 drop-shadow-lg rounded-lg mx-5 border-2 border red-400">
+                 drop-shadow-lg rounded-lg mx-5">
              <div class=" flex justify-around items-center p-4 mt-2 ">
                 <h1 class="font-bold"><i class="fa-regular fa-clock"></i> Call History</h1>
                 <button id="clear-btn" class=" text-white bg-[#29A74A] w-[90px] h-[40px]
