--- a/index.html
+++ b/index.html
@@ -45,129 +45,132 @@
      </section>
      <!-- 3-card/main -->
       <section class="card-parent bg-[#F5FFF6] flex flex-col xl:flex-row py-10 w-full max-w-[1300px] mx-auto gap-5">
-        <div class="left-card w-full xl:w-[70%] h-full grid sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+        <div class="left-card w-full md:w-[80%] lg:w-[70%] xl:w-[70%] 
+            grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 
+            gap-5 gap-y-2 justify-items-center mx-auto">
+        <!-- <div class="left-card w-full xl:w-[70%] gap-y-2 grid sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6 sm:mx-auto md:mx-auto lg:mx-auto xl:mx-0"> -->
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
                    <span class="love"><i class="fa-regular fa-heart"></i></span> 
                 </div>
-                <h1 class="font-bold text-lg mt-2">National Emergency Number</h1>
+                <h1 class="font-bold text-lg mt-4">National Emergency Number</h1>
                 <p class="text-gray-500">National Emergency</p>
                 <h1 class="font-bold text-2xl mt-2">999</h1>
                 <button class="bg-gray-200 w-[35px] h-[25px] rounded-lg">All</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="National Emergency Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div> 
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/police.png" alt="logo-police">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Police Helpline Number</h1>
                 <p class="text-gray-500">Police</p>
-                <h1 class="font-bold text-2xl mt-2">999</h1>
+                <h1 class="font-bold text-2xl mt-4">999</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Police</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Police Helpline Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/fire-service.png" alt="logo-fire">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
                 <h1 class="font-bold text-xl mt-2">Fire Service Number</h1>
                 <p class="text-gray-500">Fire Service</p>
-                <h1 class="font-bold text-2xl mt-2">999</h1>
+                <h1 class="font-bold text-2xl mt-4">999</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Fire</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Fire Service Number"data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/ambulance.png" alt="logo-ambulance">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-xl mt-2">Ambulance Service</h1>
+                <h1 class="font-bold text-xl mt-4">Ambulance Service</h1>
                 <p class="text-gray-500">Ambulance</p>
                 <h1 class="font-bold text-2xl mt-2">1994-999999</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Health</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Ambulance Service"data-number="1994-999999"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-xl mt-2">Women & Child Helpline</h1>
+                <h1 class="font-bold text-xl mt-4">Women & Child Helpline</h1>
                 <p class="text-gray-500">Women & Child Helpline</p>
                 <h1 class="font-bold text-2xl mt-2">109</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Help</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Women & Child Helpline"data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-xl mt-2">Anti-Corruption Helpline</h1>
+                <h1 class="font-bold text-xl mt-4">Anti-Corruption Helpline</h1>
                 <p class="text-gray-500">Anti-Corruption</p>
                 <h1 class="font-bold text-2xl mt-2">106</h1>
                 <button class="bg-gray-200 w-[45px] h-[25px] rounded-lg">Govt.</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button  class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Anti-Corruption Helpline"data-number="106"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-xl mt-2">Electricity Helpline</h1>
+                <h1 class="font-bold text-xl mt-4">Electricity Helpline</h1>
                 <p class="text-gray-500">Electricity Outage</p>
                 <h1 class="font-bold text-2xl mt-2">16216</h1>
                 <button class="bg-gray-200 w-[85px] h-[25px] rounded-lg">Electricity</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Electricity Helpline"data-number="16216"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
-                    <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
+                    <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/brac.png" alt="logo-emergency">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-xl mt-2">Brac Helpline</h1>
+                <h1 class="font-bold text-xl mt-4">Brac Helpline</h1>
                 <p class="text-gray-500">Brac </p>
                 <h1 class="font-bold text-2xl mt-2">16445</h1>
                 <button class="bg-gray-200 w-[40px] h-[25px] rounded-lg">NGO</button>
-                <div class="flex gap-2 mt-3">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg"data-name="Brac Helpline"data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
-            <div class="card w-[290px] h-[290px] bg-white p-6 rounded-lg drop-shadow-lg ">
+            <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg ">
                 <div class="flex justify-between items-center">
-                    <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
+                    <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/Bangladesh-Railway.png" alt="logo-emergency">
                     <span class="love"><i class="fa-regular fa-heart"></i></span>
                 </div>
-                <h1 class="font-bold text-lg mt-2">Bangladesh Railway Helpline </h1>
+                <h1 class="font-bold text-lg mt-4">Bangladesh Railway Helpline </h1>
                 <p class="text-gray-500">Bangladesh Railway</p>
                 <h1 class="font-bold text-2xl mt-2">163</h1>
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Travel</button>
-                <div class="flex gap-2 mt-4">
+                <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
                     <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="Bangladesh Railway Helpline"data-number="163"><i class="fa-solid fa-phone"Brac Helpline></i> Call</button>
                 </div>
