--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="left-card w-full md:w-[80%] lg:w-[70%] xl:w-[70%] 
             grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 
             gap-5 gap-y-2 justify-items-center mx-auto">
-        
+        <!-- <div class="left-card w-full xl:w-[70%] gap-y-2 grid sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6 sm:mx-auto md:mx-auto lg:mx-auto xl:mx-0"> -->
             <div class="card w-[290px] bg-white p-6 rounded-lg drop-shadow-lg">
                 <div class="flex justify-between items-center">
                     <img class="bg-[#FFE3E2] rounded-lg w-[35px] h-[35px] p-2" src="./assets/emergency.png" alt="logo-emergency">
@@ -172,7 +172,7 @@
                 <button class="bg-gray-200 w-[55px] h-[25px] rounded-lg">Travel</button>
                 <div class="flex gap-2 mt-8">
                     <button class="copy-btn border-2 border-gray-300 w-[115px] h-[40px] rounded-lg"><i class="fa-regular fa-paste"></i> Copy</button>
-                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="Bangladesh Railway Helpline"data-number="163"><i class="fa-solid fa-phone"Brac Helpline></i> Call</button>
+                    <button class="call-btn text-white bg-[#29A74A] w-[115px] h-[40px] rounded-lg" data-name="Bangladesh Railway Helpline"data-number="163"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
             </div>
            
